--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.7.4",
         "axios": "^0.17.1",
         "react": "^16.1.1",
         "react-dom": "^16.1.1",
@@ -13,9 +14,21 @@
         "redux-thunk": "^2.2.0"
     },
     "scripts": {
-        "start": "SET PORT=4000 && react-scripts start",
+        "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test --env=jsdom",
+        "test": "jest",
         "eject": "react-scripts eject"
+    },
+    "devDependencies": {
+        "@babel/preset-env": "^7.7.6",
+        "@babel/preset-react": "^7.7.4",
+        "babel-jest": "^24.9.0",
+        "enzyme": "^3.10.0",
+        "enzyme-adapter-react-16": "^1.15.1",
+        "jest": "^24.9.0",
+        "react-test-renderer": "^16.12.0"
+    },
+    "jest": {
+        "setupFilesAfterEnv": ["<rootDir>/src/TestSettup.js"]
     }
 }
