--- a/package.json
+++ b/package.json
@@ -1,43 +1,55 @@
 {
-    "name": "lesson16-call-api",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@babel/plugin-proposal-class-properties": "^7.7.4",
-        "axios": "^0.19.0",
-        "react": "^16.1.1",
-        "react-dom": "^16.1.1",
-        "react-redux": "^5.0.6",
-        "react-router-dom": "^4.2.2",
-        "react-scripts": "^1.0.17",
-        "redux": "^3.7.2",
-        "redux-thunk": "^2.2.0"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "jest --watch",
-        "eject": "react-scripts eject"
-    },
-    "devDependencies": {
-        "@babel/preset-env": "^7.7.6",
-        "@babel/preset-react": "^7.7.4",
-        "babel-jest": "^24.9.0",
-        "enzyme": "^3.10.0",
-        "enzyme-adapter-react-16": "^1.15.1",
-        "jest": "^24.9.0",
-        "jsdom": "15.2.1",
-        "jsdom-global": "3.0.2",
-        "react-test-renderer": "^16.12.0"
-    },
-    "jest": {
-        "testEnvironment": "jest-environment-node",
-        "setupFilesAfterEnv": [
-            "<rootDir>/src/TestSettup.js"
-        ],
-        "moduleNameMapper": {
-            "\\.(css|less)$": "<rootDir>/src/__test__/__mocks__/styleMock.js",
-            "\\.(gif|ttf|eot|svg)$": "<rootDir>/src/__test__/__mocks__/fileMock.js"
-        }
+  "name": "test-lesson-16-api-request",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "axios": "^0.19.0",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "^1.0.17",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "jest --watch",
+    "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.7.6",
+    "@babel/preset-react": "^7.7.4",
+    "babel-jest": "^24.9.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "jest": "^24.9.0",
+    "jsdom": "15.2.1",
+    "jsdom-global": "3.0.2",
+    "react-test-renderer": "^16.12.0"
+  },
+  "jest": {
+    "testEnvironment": "jest-environment-node",
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/TestSettup.js"
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less)$": "<rootDir>/src/__test__/__mocks__/styleMock.js",
+      "\\.(gif|ttf|eot|svg)$": "<rootDir>/src/__test__/__mocks__/fileMock.js"
     }
+  },
+  "description": "Dang building",
+  "main": "babel.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hntvip/react-lesson-16-test.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hntvip/react-lesson-16-test/issues"
+  },
+  "homepage": "https://github.com/hntvip/react-lesson-16-test#readme"
 }
