--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest --watch",
+    "test:coverage": "jest --collect-coverage",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
